# TaskTracker

./: .dockerignore  README.md  docker-compose.yml  ruff.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  ruff.toml
backend/apps/: urls.py
backend/apps/tasks/: admin.py  models.py  search_document.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/apps/tasks/selectors/: search.py  users.py
backend/apps/tasks/serializers/: tasks.py
backend/apps/tasks/services/: label.py  task_status.py  tasks.py
backend/apps/users/: admin.py  models.py  permissions.py  search_document.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/models/: __init__.py  permissions.py  user.py
backend/apps/users/selectors/: users.py
backend/apps/users/serializers/: manage.py  search.py  user.py
backend/apps/users/services/: users.py
backend/apps/users/utils/: auth.py
backend/apps/workspaces/: admin.py  models.py  urls.py  views.py
backend/apps/workspaces/migrations/: 0001_initial.py  0002_alter_userworkspacerole_options_workspace_created_by.py  0003_alter_userworkspacerole_unique_together.py
backend/apps/workspaces/models/: __init__.py  workspace.py
backend/apps/workspaces/serializers/: workspace.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  local.py  settings.py
backend/tests/: conftest.py  test_tasks.py  test_users.py  test_workspace.py
